--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                         min="0"
                         max="100"
                         step="0.1"
+                        oninput="calculateMargins()"
                     >
                 </div>
                 <button onclick="calculateMargins()" class="calculate-btn">
