--- a/index.html
+++ b/index.html
@@ -8,60 +8,43 @@
 </head>
 <body>
     <div class="container">
-        <div class="calculator-card">
+        <div class="calculator">
             <h1>毛利率计算器</h1>
             
+            <!-- 公式说明 -->
+            <div class="formula">
+                <p>计算公式：毛利率 = (销售收入 - 成本) / 销售收入 × 100%</p>
+                <p>示例：售价100元，成本80元，毛利率 = (100 - 80) / 100 = 20%</p>
+                <p>注：有退款时，收入需要扣除退款金额</p>
+            </div>
+            
             <!-- 输入表单 -->
-            <div class="form-group">
+            <div class="form">
                 <div class="input-group">
                     <label>销售收入（元）</label>
-                    <input
-                        type="number"
-                        id="revenue"
-                        placeholder="请输入销售收入"
-                    >
+                    <input type="number" id="revenue" placeholder="请输入销售收入">
                 </div>
                 <div class="input-group">
                     <label>成本（元）</label>
-                    <input
-                        type="number"
-                        id="cost"
-                        placeholder="请输入成本"
-                    >
+                    <input type="number" id="cost" placeholder="请输入成本">
                 </div>
                 <div class="input-group">
                     <label>退款率（%）</label>
-                    <input
-                        type="number"
-                        id="refundRate"
-                        placeholder="请输入退款率"
-                        min="0"
-                        max="100"
-                        step="0.1"
-                    >
+                    <input type="number" id="refundRate" placeholder="请输入退款率" min="0" max="100" step="0.1">
                 </div>
                 <div class="input-group">
                     <label>毛利率（%）</label>
-                    <input
-                        type="number"
-                        id="marginRate"
-                        placeholder="请输入毛利率"
-                        min="0"
-                        max="100"
-                        step="0.1"
-                    >
+                    <input type="number" id="marginRate" placeholder="请输入毛利率" min="0" max="100" step="0.1">
                 </div>
             </div>
 
             <!-- 计算结果 -->
             <div id="results" class="results hidden">
-                <div class="result-card">
-                    <h3>计算结果</h3>
-                    <div class="result-details">
-                        <p>调整后收入：<span id="adjustedRevenue"></span></p>
-                        <p>调整后利润：<span id="adjustedProfit"></span></p>
-                        <p>毛利率：<span id="adjustedMarginRate"></span></p>
-                    </div>
+                <h3>计算结果</h3>
+                <div class="result-item">
+                    <p>调整后收入：<span id="adjustedRevenue"></span></p>
+                    <p>调整后利润：<span id="adjustedProfit"></span></p>
+                    <p>毛利率：<span id="adjustedMarginRate"></span></p>
                 </div>
             </div>
         </div>
